# hello-databricks

./: .gitignore  LICENSE  README.md  pyproject.toml
cloudformation/: databricks-base.cf.yaml  (+11 more)
workspace/: .gitignore  CLAUDE.md  databricks.yml  pyproject.toml  query_profiling_01.sql  sample-helloworld.dbc  sample-mlflow.dbc
workspace/20241201_QueryProfile/: query_profiling_01.sql
workspace/common/: pyproject.toml
workspace/common/src/: config_loader.py
workspace/common/tests/unit/: test_config_loader.py
workspace/config/: config_dev.json  config_prd.json
workspace/extra/src/: 20250201_kafka.py
workspace/extra/src/20250506_pytest/: pyproject.toml  pytest.ipynb
workspace/proj_assistant_agent_etl/: databricks.yml.sample  pyproject.toml
workspace/proj_assistant_agent_etl/src/transformations/: b_website.py
workspace/proj_assistant_agent_etl/terraform/: .terraform.lock.hcl  main.tf  terraform.tfvars.sample
workspace/proj_sampledata/: .gitignore  databricks.yml.sample  pyproject.toml
workspace/proj_sampledata/resources/: pipeline.yml
workspace/proj_sampledata/src/transformations/: tenki_bronze.sql  tenki_gold.sql
workspace/proj_wikiapp/: .gitignore  databricks.yml
workspace/proj_wikiapp/app_wiki/: README.md  app.yaml  launch.sh
workspace/resources/: workspace.pipeline.yml
workspace/sample_agent/: .gitignore  README.md  databricks.yml  pyproject.toml
workspace/sample_agent/resources/: etl.pipeline.yml
workspace/sample_agent/src/: 01_import_data.ipynb  evaluate.py
workspace/sample_agent/src/agent/: 01_import_data.ipynb  02_make_agent.ipynb  03_evaluate.ipynb  agent.py  environment.yaml
workspace/sample_agent/src/etl/transformations/: g_monthly_news_embed.py
workspace/sample_agent/src/libs/: absclass.py  retriever.py  utils.py
workspace/sample_agent/terraform/: .terraform.lock.hcl  main.tf
workspace/sample_extra/: .gitignore  README.md  databricks.yml  pyproject.toml
workspace/sample_extra/resources/: workspace.pipeline.yml
workspace/sample_extra/src/20250709_RedshiftUDF/: redshift_udf.ipynb
workspace/sample_extra/src/sample_helloworld/: 02. DeltaLiveTable.sql
workspace/sample_extra/src/sample_mlflow/: work.py
workspace/sample_helloworld/: 01. HelloWorld.py  02. DeltaLiveTable.sql
workspace/src/sample_bundle/: work.ipynb
workspace/src/sample_pytest/: pytest.ipynb
workspace/src/sample_pytest/tests/: test_mod.py
workspace/tmpl/job/: databricks.yml  pyproject.toml
workspace/tmpl/job/config/: config_dev.json  config_prd.json
workspace/tmpl/job/notebooks/: sample.ipynb
workspace/tmpl/pipeline/: databricks.yml  pyproject.toml
workspace/tmpl/pipeline/resources/: pipeline.yml
(+98 files in other folders)
