[tool.poetry]
name = "databricks-sample"
version = "0.1.0"
description = ""
authors = ["namoshika <namoshika@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
cfn-lint = "^0.85.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
