[project]
name = "workspace"
version = "0.1.0"
description = "Databricks Workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "databricks-connect>=16.1.4",
    "scikit-learn>=1.6.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "pip>=25.1.1",
]
