[project]
name = "sample_agent"
version = "0.0.1"
authors = [{ name = "tritiumpipe@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "databricks-langchain>=0.12.1",
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
    "databricks-langchain>=0.12.1",
    "langchain-google-genai>=4.1.3",
    "langchain[community]>=1.2.3",
    "mlflow>=3.8.1",
]

[dependency-groups]
dev = [
    "pytest",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel>=7.1.0",
]

[project.scripts]
main = "sample_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 125
