[project]
name = "sample-pytest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = []

[project.optional-dependencies]
vsc = [
    "ipykernel>=7.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests",]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
